<resources>
    <string name="app_name">Saathiya</string>
    <string name="go_back">Are you sure want to go back?</string>
    <string name="close_app">Are you sure want to close application?</string>
    <string name="Login">Login</string>
    <string name="Sign_Up">REGISTER FREE</string>
    <string name="data_not_avelable">Data not available</string>
    <string name="Registration">REGISTRATION</string>
    <string name="Indias_most_trusted_matrimony_app">India\'s most trusted \nPremium Matrimony app</string>
    <string name="login_now">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="Please_enter_username_and_password">Please enter email id and password.</string>
    <string name="Please_enter_username">Please enter email id.</string>
    <string name="Please_enter_password">Please enter password.</string>
    <string name="Please_Wait">Please Wait…</string>
    <string name="Please_enter_valid_email_address">Please enter valid email address</string>
    <string name="Enter_Email_Id_Or_Username">Enter Email Id Or Username</string>
    <string name="Submit">SUBMIT</string>
    <string name="Profile_Created_By">PROFILE CREATED FOR</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Religion">Religion</string>
    <string name="Caste">Caste</string>
    <string name="Mother_Tongue">Mother Tongue</string>
    <string name="Country">Country</string>
    <string name="Country_Code">Country Code</string>
    <string name="Verify_continue">VERIFY &amp; CONTINUE</string>
    <string name="edit">EDIT</string>
    <string name="edit_mobile_no">Edit Mobile No</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="Please_enter_your_register_your_mobile_no">Please enter your registered mobile no.</string>
    <string name="CONTINUE">CONTINUE</string>
    <string-array name="arr_marital_status">
        <item>Never Married</item>
        <item>Widower</item>
        <item>Divorced</item>
        <item>Awaiting Divorce</item>
    </string-array>
    <string-array name="arr_physical_status">
        <item>Normal</item>
        <item>Physically Challenged</item>
    </string-array>
    <string-array name="arr_Employed_in">
        <item>Government</item>
        <item>Private</item>
        <item>Business</item>
        <item>Defence</item>
        <item>Self Employed</item>
    </string-array>
    <string-array name="arr_monthly_income">
        <item>0-5000</item>
        <item>5000-10000</item>
        <item>10000-15000</item>
        <item>15000-20000</item>
        <item>20000-25000</item>
        <item>25000-30000</item>
        <item>30000-35000</item>
        <item>35000-40000</item>
        <item>40000-45000</item>
        <item>45000-50000</item>
        <item>50000-55000</item>
        <item>55000-60000</item>
        <item>60000-65000</item>
        <item>65000-70000</item>
        <item>70000-75000</item>
        <item>75000-80000</item>
        <item>80000-85000</item>
        <item>85000-90000</item>
        <item>90000-95000</item>
        <item>95000-100000</item>
        <item>100000-200000</item>
    </string-array>
    <string-array name="arr_diet">
        
        <item>Vegetarian</item>
        <item>Non-Vegetarian</item>
        <item>Eggetarian</item>
    </string-array>
    <string-array name="arr_manglik">
        <item>No</item>
        <item>Yes</item>
        <item>I do not know</item>
    </string-array>
    <string-array name="arr_gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="arr_hobbies">
        <item>Reading</item>
        <item>Yoga</item>
        <item>Swimming</item>
    </string-array>
    <string name="find_your_nperfect_match_ntoday">Find Your\nPerfect match\nToday</string>
    <string name="english">English</string>
    <string name="select_language">Select Language?</string>
    <string name="select_language1">Select Language</string>
    <string name="selected">Selected</string>
    <string name="marathi">Marathi</string>
    <string name="hindi">Hindi</string>
    <string name="gujarati">Gujarati</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="register_now">Register Now!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="init_info_text">0 KM</string>
    <string name="init_info_calls">0 number of calls</string>
    <string name="init_info_ft">0 ft</string>
    <string name="init_info_in">0 in</string>
    <string name="init_info_income">0 lacs</string>
    <string name="buy_now">Buy Now</string>
    <string name="when_they_install_this_app_you_will_10_calls_in_your_account">
When they install this app, you will get 10 calls in your account.
</string>
    <string name="copy_your_code">Copy your code -</string>
    <string name="basic_details">Basic Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="height">Height</string>
    <string name="city">City / District</string>
    <string name="state">State</string>
    <string name="brief_description">Brief Description</string>
    <string name="educational_profession_details">Educational/Profession Details</string>
    <string name="profession">Profession</string>
    <string name="employed_in">Employed In</string>
    <string name="income_lpa">Income (Per Month)</string>
    <string name="religion_details">Religion Details</string>
    <string name="caste">Caste</string>
    <string name="sub_caste">Sub Caste</string>
    <string name="other_details">Other Details</string>
    <string name="manged_by">Managed By</string>
    <string name="mobile_parent">Mobile (Parent)</string>
    <string name="shaadi_budget">Shaadi Budget</string>
    <string name="specially_abled">Specially Abled</string>
    <string name="call_timing">Available for call</string>
    <string name="block">Block</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="shadi_budget">Shadi Budget</string>
    <string name="income">Income</string>
    <string name="mobile_number_parent">Mobile Number(Parent)</string>
    <string name="manglik_status">Manglik Status</string>
    <string name="marital_status">Marital Status</string>
    <string name="mother_tongue">Mother Tongue</string>
    <string name="all_time">Any Time</string>
    <string name="document_details">Document Details</string>
    <string name="tap_to_add_document_photo">Tap to add document photo</string>
    <string name="tap_to_add_photo">Tap to add photo</string>
    <string name="photos_details">Photos Details</string>
    <string name="update_photos">Update Photos</string>
    <string name="title_activity_liked_users">Liked Users</string>
    <string name="terms_conditions">Accept Terms and Condition</string>
    <string name="ok">Ok</string>
    <string name="male">Male</string>
    <string name="please_select">Please select</string>
    <string name="education_profession_details">Education / Profession Details</string>
    <string name="occupation">Occupation</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_valid_mobile_no">Please enter valid mobile no</string>
    <string name="please_enter_mobile_no">Please enter mobile no</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="enter_password_with_special_characters">Password should be at least 8 characters long, must include letters, numbers and special characters.</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="verify">Verify</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="password"><font color='#707070'>Password</font><font color='@android:color/red'>*</font></string>
    <string name="update_password">Update Password</string>
    <string name="type_a_message">Type a message</string>
    <string name="chat_list">Messaged List</string>
    <string name="users_list">Users List</string>
    <string name="profile_details">Profile Details</string>
    <string name="photos">Photos</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="age">Age</string>
    <string name="height_ft_in">Height (Ft In)</string>
    <string name="religion">Religion</string>
    <string name="income_in_lacs">Income</string>
    <string name="manglik">Manglik</string>
    <string name="diet">Diet</string>
    <string name="education">Education</string>
    <string name="search">Search</string>
    <string name="hobbies_and_interest">Hobbies and Interest</string>
    <string name="my_interest">My Interest</string>
    <string name="other">Other</string>
    <string name="recent_profile_not_found">No new profile found</string>
    <string name="filter_profile_not_found">No profile found please update your filter</string>
    <string name="you_are_all_caught_for_now">You are all caught for now</string>
    <string name="membership_status">Membership Status -</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="liked_profile">Liked Profile</string>
    <string name="likes_received">Likes \nReceived</string>
    <string name="hobbies_amp_interest"><![CDATA[Hobbies & Interest]]></string>
    <string name="visited_users">Visited Users</string>
    <string name="called_users">Called Users</string>
    <string name="messaged_users">Messaged Users</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="package1">Package</string>
    <string name="setting">Setting</string>
    <string name="languages">Languages</string>
    <string name="mobile_no_email"><font color='#707070'>Mobile No / Email</font><font color='@android:color/red'>*</font></string>
    <string name="notifications">Notifications</string>
    <string name="invite_to_other_member">Invite to other member</string>
    <string name="invite_your_friends_to_saathiya">Invite your friends to saathiya</string>
    <string name="invite">Invite</string>
    <string name="like_received">Likes Received &amp; Sent</string>
    <string name="reason">Reason</string>
    <string name="please_select_your_reason">Please select your reason</string>
    <string name="found_partner">Found partner</string>
    <string name="looking_at_other_matrimony_app">Looking at other matrimony app</string>
    <string name="looking_offline">Looking offline</string>
    <string name="deactivate">Deactivate</string>
    <string name="verifcation_code">Verifcation Code</string>
    <string name="otp_has_been_sent_to_your_mobile_number_please_verify">OTP has been sent to your mobile number. Please verify</string>
    <string name="resent_in_30_sec">Resent in 30 Sec</string>
    <string name="rejected_users">Rejected Users</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_calls">Enter Calls</string>
    <string name="gift_calls">Gift Calls to other member</string>
</resources>