<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_white_round_conrner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_orange_rounded_top_rectengle"
            >
            <com.prometteur.sathiya.utills.TextViewCustomFont
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/reason"
                android:textColor="@color/white"
                android:layout_marginLeft="15dp"
                android:textSize="25dp"
                android:layout_centerVertical="true"
                android:textStyle="bold" />

        </RelativeLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_margin="20dp"

            >

            <com.prometteur.sathiya.utills.TextViewCustomFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_select_your_reason"
                android:textColor="@color/black"
                android:textSize="25dp"

                />

           <RadioGroup
               android:id="@+id/rgReason"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_10sdp">
               <com.prometteur.sathiya.utills.RadioButtonCustomFont
                   android:id="@+id/rbFoundPartner"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/found_partner"
                   android:buttonTint="@color/darkGray"
                   android:textColor="@color/darkGray"/>
               <com.prometteur.sathiya.utills.RadioButtonCustomFont
                   android:id="@+id/rbLookAnother"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/looking_at_other_matrimony_app"
                   android:buttonTint="@color/darkGray"
                   android:textColor="@color/darkGray"/>
               <com.prometteur.sathiya.utills.RadioButtonCustomFont
                   android:id="@+id/rbLookOffline"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/looking_offline"
                   android:buttonTint="@color/darkGray"
                   android:textColor="@color/darkGray"/>
           </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp">
            <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_orange_rounded_rectengle"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/deactivate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:gravity="center"
                />
            <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_gray_rounded_rectengle"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>