<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_main_color_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.prometteur.sathiya.utills.TextViewCustomFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_14sdp"
            android:text="@string/verifcation_code"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_14sdp"
            android:src="@drawable/icn_close" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_verifiction_code"
        android:layout_below="@+id/relativeLayout"/>



    <com.prometteur.sathiya.utills.TextViewCustomFont
        android:id="@+id/tvOtpMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/otp_has_been_sent_to_your_mobile_number_please_verify"
        android:layout_below="@+id/imgLogo"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_centerHorizontal="true"/>
    <com.prometteur.sathiya.utills.TextViewCustomFont
        android:id="@+id/tvOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text=""
        android:layout_below="@+id/tvOtpMsg"
        android:layout_centerHorizontal="true"/>

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:height="50dp"
        app:width="50dp"
        app:bar_height="2dp"
        app:length="4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        app:otp_text_size="20dp"
        android:layout_below="@+id/tvOtp"
        app:otp_box_background="@drawable/rounded_toast"
        app:otp_box_background_active="@drawable/rounded_toast_pink_round"
        />

    <com.prometteur.sathiya.utills.TextViewCustomFont
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/resent_in_30_sec"
        android:layout_below="@+id/otpTextView"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_alignParentRight="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_pink_rectengle_gradient"
        android:paddingStart="@dimen/_30sdp"
        android:paddingEnd="@dimen/_30sdp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvResend"/>
</RelativeLayout>